# tagged-format

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Gemfile  README.md  Teapot  development-lock.yml  infusion.rb  teapot.rb  travis-lock.yml
.github/workflows/: development.yml
Exporters/Blender/: README.md  io_tagged_model_format.py
TMF Tool/: cube.tagged-model-text  main.cpp  square.tagged-mesh-text
Tagged Model Format/: Block.h  Parser.cpp  Reader.cpp  Writer.h
Tagged Model Format.xcodeproj/: project.pbxproj
Tagged Model Format.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TaggedFormat.xcodeproj/: project.pbxproj
TaggedFormat.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
TaggedModelFormat/: Block.cpp  Block.h  Buffer.h  MemoryBuffer.cpp  MemoryBuffer.h  Parser.cpp  Parser.h  Reader.h  Writer.cpp  Writer.h
TaggedModelFormat.xcodeproj/: project.pbxproj
examples/: cube.tft  square.tft
exporters/Blender/: README.md  (+4 more)
javascript/: skeleton.blend  skeleton.tft
source/: Alignment.h  Axes.cpp  Axes.h  Block.cpp  Block.h  Buffer.h  CMakeLists.txt  Doxyfile.in  External.cpp  External.h  MemoryBuffer.cpp  MemoryBuffer.h  Mesh.h  Parser.cpp  Parser.h  Reader.cpp  Reader.h  Table.cpp  Table.h  TaggedFormat.cpp  Writer.h  build.rb  tf-convert.cpp
source/TaggedFormat/: Alignment.h  Axes.cpp  Axes.h  Axes.hpp  Block.cpp  Block.h  Block.hpp  Buffer.h  Buffer.hpp  Camera.cpp  Camera.hpp  External.cpp  External.h  External.hpp  MemoryBuffer.cpp  MemoryBuffer.h  MemoryBuffer.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  Parser.cpp  Parser.h  Parser.hpp  Reader.cpp  Reader.h  Reader.hpp  Scene.cpp  Scene.h  Scene.hpp  Skeleton.cpp  Skeleton.h  Skeleton.hpp  Table.cpp  Table.h  Table.hpp  Types.h  Types.hpp  Writer.cpp  Writer.hpp
source/TaggedFormat-Converter/: main.cpp
source/TaggedFormat-js/: Automatic Mortar.tfb  Automatic Mortar.tft  animate.html  automatic-mortar.html  gl-matrix.js  index.html  skeleton.blend1  skeleton.dae  skeleton.tfb  support.js  tagged-format.js
source/tf-convert/: tf-convert.cpp
src/: Block.h  Buffer.h  Doxyfile.in  Parser.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h  tmf-tool.cpp
test/: CMakeLists.txt  Test.Block.cpp  Test.Mesh.cpp  Test.Scene.cpp  Test.Skeleton.cpp  UnitTest.cpp  UnitTest.h  build.rb  dump-backtrace  rakefile.rb
test/TaggedFormat/: Camera.cpp  Mesh.cpp  Scene.cpp  Test.Block.cpp  Test.Camera.cpp  Test.Mesh.cpp  Test.Scene.cpp  Test.Skeleton.cpp
(+2 files in other folders)
